--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -46,7 +46,9 @@
     <section>
     <p class="sans_less_big">Greeting: <div class="sans_less_big" id="hello"></div></p>
     </section>
-  
+    <section>
+      <img src="http://i.imgur.com/QCiLQdM.gif"/>
+    </section>
     <script>      
 
     function poll() {
